--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -39,39 +39,22 @@ jobs:
           set -euo pipefail
 
           ACR_NAME=$(az acr list -g "${RG_NAME}" --query "[0].name" -o tsv)
-          if [ -z "${ACR_NAME}" ]; then
-            echo "ERROR: No Container Registry found in RG ${RG_NAME}. Run Deploy Infra (dev) first."
-            exit 1
-          fi
+          [ -n "${ACR_NAME}" ] || (echo "ERROR: No ACR in ${RG_NAME}"; exit 1)
           ACR_LOGIN=$(az acr show -n "${ACR_NAME}" -g "${RG_NAME}" --query "loginServer" -o tsv)
           ACR_ID=$(az acr show -n "${ACR_NAME}" -g "${RG_NAME}" --query "id" -o tsv)
 
           STORAGE=$(az storage account list -g "${RG_NAME}" --query "[0].name" -o tsv)
-          if [ -z "${STORAGE}" ]; then
-            echo "ERROR: No Storage Account found in RG ${RG_NAME}."
-            exit 1
-          fi
+          [ -n "${STORAGE}" ] || (echo "ERROR: No Storage Account in ${RG_NAME}"; exit 1)
 
           SB=$(az servicebus namespace list -g "${RG_NAME}" --query "[0].name" -o tsv)
-          if [ -z "${SB}" ]; then
-            echo "ERROR: No Service Bus Namespace found in RG ${RG_NAME}."
-            exit 1
-          fi
+          [ -n "${SB}" ] || (echo "ERROR: No Service Bus Namespace in ${RG_NAME}"; exit 1)
 
           CAE=$(az containerapp env list -g "${RG_NAME}" --query "[0].name" -o tsv)
-          if [ -z "${CAE}" ]; then
-            echo "ERROR: No Container Apps Environment found in RG ${RG_NAME}."
-            exit 1
-          fi
+          [ -n "${CAE}" ] || (echo "ERROR: No Container Apps Environment in ${RG_NAME}"; exit 1)
 
           PG_SERVER=$(az resource list -g "${RG_NAME}" --resource-type "Microsoft.DBforPostgreSQL/flexibleServers" --query "[?contains(name,'-pg-ne')].name | [0]" -o tsv)
-          if [ -z "${PG_SERVER}" ]; then
-            PG_SERVER=$(az resource list -g "${RG_NAME}" --resource-type "Microsoft.DBforPostgreSQL/flexibleServers" --query "[0].name" -o tsv)
-          fi
-          if [ -z "${PG_SERVER}" ]; then
-            echo "ERROR: No Postgres Flexible Server found in RG ${RG_NAME}."
-            exit 1
-          fi
+          [ -n "${PG_SERVER}" ] || PG_SERVER=$(az resource list -g "${RG_NAME}" --resource-type "Microsoft.DBforPostgreSQL/flexibleServers" --query "[0].name" -o tsv)
+          [ -n "${PG_SERVER}" ] || (echo "ERROR: No Postgres Flexible Server in ${RG_NAME}"; exit 1)
 
           echo "ACR_NAME=${ACR_NAME}" >> $GITHUB_ENV
           echo "ACR_LOGIN=${ACR_LOGIN}" >> $GITHUB_ENV
@@ -115,7 +98,7 @@ jobs:
             -t "${ACR_LOGIN}/opal/aml-sd-stub:${IMAGE_TAG}" \
             -f src/aml_sd_stub/Dockerfile . --push
 
-      - name: Create/Update Container Apps with managed identity + AcrPull
+      - name: Create/Update Container Apps (CLI-compatible)
         run: |
           set -euo pipefail
 
@@ -130,6 +113,53 @@ jobs:
             "SERVICEBUS_NAMESPACE=${SB}"
           )
 
+          ensure_identity () {
+            local NAME="$1"
+            # Ensure system identity exists
+            az containerapp identity assign -g "${RG_NAME}" -n "${NAME}" --system-assigned >/dev/null
+          }
+
+          ensure_acr_pull () {
+            local NAME="$1"
+            local PRINCIPAL_ID
+            PRINCIPAL_ID=$(az containerapp show -g "${RG_NAME}" -n "${NAME}" --query "identity.principalId" -o tsv)
+            [ -n "${PRINCIPAL_ID}" ] || (echo "ERROR: No principalId for ${NAME}"; exit 1)
+
+            # Requires your new UAA-with-condition grant (AcrPull only)
+            az role assignment create \
+              --assignee-object-id "${PRINCIPAL_ID}" \
+              --assignee-principal-type ServicePrincipal \
+              --role "AcrPull" \
+              --scope "${ACR_ID}" 2>/dev/null || true
+          }
+
+          ensure_registry_binding () {
+            local NAME="$1"
+            # Bind ACR using system identity (separate command; works when update flags don't)
+            az containerapp registry set -g "${RG_NAME}" -n "${NAME}" \
+              --server "${ACR_LOGIN}" \
+              --identity system >/dev/null
+          }
+
+          ensure_ingress () {
+            local NAME="$1"
+            local MODE="$2"
+            local PORT="$3"
+
+            if [ "${MODE}" = "external" ]; then
+              az containerapp ingress update -g "${RG_NAME}" -n "${NAME}" \
+                --type external \
+                --target-port "${PORT}" >/dev/null
+            elif [ "${MODE}" = "internal" ]; then
+              az containerapp ingress update -g "${RG_NAME}" -n "${NAME}" \
+                --type internal \
+                --target-port "${PORT}" >/dev/null
+            else
+              # none: do nothing
+              true
+            fi
+          }
+
           ensure_app () {
             local NAME="$1"
             local IMAGE="$2"
@@ -138,37 +168,24 @@ jobs:
 
             if az containerapp show -g "${RG_NAME}" -n "${NAME}" >/dev/null 2>&1; then
               echo "Updating ${NAME}..."
-              az containerapp update -g "${RG_NAME}" -n "${NAME}" \
-                --image "${IMAGE}" \
-                --set-env-vars "${ENV_VARS[@]}" \
-                --registry-server "${ACR_LOGIN}" \
-                --registry-identity system \
-                $( [ "${INGRESS}" = "none" ] && echo "" || echo "--ingress ${INGRESS} --target-port ${PORT}" )
             else
               echo "Creating ${NAME}..."
               az containerapp create -g "${RG_NAME}" -n "${NAME}" \
                 --environment "${CAE}" \
                 --image "${IMAGE}" \
-                --registry-server "${ACR_LOGIN}" \
-                --registry-identity system \
                 --min-replicas 1 --max-replicas 3 \
-                --env-vars "${ENV_VARS[@]}" \
-                $( [ "${INGRESS}" = "none" ] && echo "" || echo "--ingress ${INGRESS} --target-port ${PORT}" )
+                --env-vars "${ENV_VARS[@]}" >/dev/null
             fi
 
-            # After create/update, ensure the system-assigned identity has AcrPull on the ACR
-            PRINCIPAL_ID=$(az containerapp show -g "${RG_NAME}" -n "${NAME}" --query "identity.principalId" -o tsv)
-            if [ -z "${PRINCIPAL_ID}" ]; then
-              echo "ERROR: Could not read system-assigned identity principalId for ${NAME}"
-              exit 1
-            fi
+            ensure_identity "${NAME}"
+            ensure_acr_pull "${NAME}"
+            ensure_registry_binding "${NAME}"
+            ensure_ingress "${NAME}" "${INGRESS}" "${PORT}"
 
-            # Role assignment is idempotent-ish: create may fail if exists; we ignore that.
-            az role assignment create \
-              --assignee-object-id "${PRINCIPAL_ID}" \
-              --assignee-principal-type ServicePrincipal \
-              --role "AcrPull" \
-              --scope "${ACR_ID}" 2>/dev/null || true
+            # Always update image + env vars idempotently
+            az containerapp update -g "${RG_NAME}" -n "${NAME}" \
+              --image "${IMAGE}" \
+              --set-env-vars "${ENV_VARS[@]}" >/dev/null
           }
 
           ensure_app "opal-web-api-${ENV_NAME}"          "${ACR_LOGIN}/opal/web-api:${IMAGE_TAG}"          "external" 8080
