--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -98,7 +98,7 @@ jobs:
             -t "${ACR_LOGIN}/opal/aml-sd-stub:${IMAGE_TAG}" \
             -f src/aml_sd_stub/Dockerfile . --push
 
-      - name: Create/Update Container Apps (self-healing)
+      - name: Create/Update Container Apps (self-healing + ingress enable)
         run: |
           set -euo pipefail
 
@@ -145,19 +145,28 @@ jobs:
             local MODE="$2"
             local PORT="$3"
 
-            if [ "${MODE}" = "external" ]; then
+            if [ "${MODE}" = "none" ]; then
+              return 0
+            fi
+
+            # Some CLI versions require 'enable' before 'update'
+            if ! az containerapp ingress show -g "${RG_NAME}" -n "${NAME}" >/dev/null 2>&1; then
+              echo "Ingress not enabled yet for ${NAME}; enabling..."
+              az containerapp ingress enable -g "${RG_NAME}" -n "${NAME}" \
+                --type "${MODE}" \
+                --target-port "${PORT}" \
+                --transport auto >/dev/null
+            else
               az containerapp ingress update -g "${RG_NAME}" -n "${NAME}" \
-                --type external --target-port "${PORT}" >/dev/null
-            elif [ "${MODE}" = "internal" ]; then
-              az containerapp ingress update -g "${RG_NAME}" -n "${NAME}" \
-                --type internal --target-port "${PORT}" >/dev/null
+                --type "${MODE}" \
+                --target-port "${PORT}" >/dev/null
             fi
           }
 
           ensure_app () {
             local NAME="$1"
             local IMAGE="$2"
-            local INGRESS="$3"
+            local INGRESS="$3"   # external|internal|none
             local PORT="$4"
 
             if az containerapp show -g "${RG_NAME}" -n "${NAME}" >/dev/null 2>&1; then
