--- a/src/export_worker/Dockerfile
+++ b/src/export_worker/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends build-essential curl \
     && rm -rf /var/lib/apt/lists/*
 
-# shared package (shared.db etc.)
+# Copy the actual shared Python package to /app/shared
 COPY src/shared/shared /app/shared
 
 COPY src/export_worker/requirements.txt /app/requirements.txt
@@ -19,5 +19,4 @@ COPY src/export_worker/export_worker /app/export_worker
 RUN pip install --no-cache-dir -U pip \
     && pip install --no-cache-dir -r /app/requirements.txt
 
-# You have export_worker/worker.py, not export_worker/main.py
 CMD ["python", "-m", "export_worker.worker"]
