--- a/src/orchestrator/Dockerfile
+++ b/src/orchestrator/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.11-slim
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONPATH=/app
 
 WORKDIR /app
 
@@ -9,18 +10,13 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends build-essential curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Build context is repo root
-COPY src/shared /app/shared
-COPY src/orchestrator /app/orchestrator
+# Copy the actual shared Python package to /app/shared
+COPY src/shared/shared /app/shared
 
-# Install baseline deps (keeps CI deterministic even if requirements.txt doesn't exist yet)
+COPY src/orchestrator/requirements.txt /app/requirements.txt
+COPY src/orchestrator/orchestrator /app/orchestrator
+
 RUN pip install --no-cache-dir -U pip \
-    && pip install --no-cache-dir \
-      "pydantic==2.9.2" \
-      "psycopg[binary]==3.2.2" \
-      "azure-storage-blob==12.22.0" \
-      "azure-servicebus==7.12.2" \
-      "httpx==0.27.2"
+    && pip install --no-cache-dir -r /app/requirements.txt
 
-# Try common entrypoints; if yours differs, the next error will tell us exactly what to run.
 CMD ["python", "-m", "orchestrator.main"]
