--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -34,14 +34,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq gettext-base
 
-      - name: Sanity check required files
-        run: |
-          set -euo pipefail
-          test -f src/web_api/requirements.txt || (echo "Missing src/web_api/requirements.txt" && exit 1)
-          test -f src/export_worker/requirements.txt || (echo "Missing src/export_worker/requirements.txt" && exit 1)
-          test -f src/billing_service/requirements.txt || (echo "Missing src/billing_service/requirements.txt" && exit 1)
-          test -f src/orchestrator/requirements.txt || (echo "Missing src/orchestrator/requirements.txt" && exit 1)
-
       - name: Discover infra in Azure
         run: |
           set -euo pipefail
@@ -60,6 +52,7 @@ jobs:
           CAE=$(az containerapp env list -g "${RG_NAME}" --query "[0].name" -o tsv)
           [ -n "${CAE}" ] || (echo "ERROR: No Container Apps Environment in ${RG_NAME}"; exit 1)
 
+          # Prefer the NE-postfixed PG if present, otherwise first one
           PG_SERVER=$(az resource list -g "${RG_NAME}" --resource-type "Microsoft.DBforPostgreSQL/flexibleServers" --query "[?contains(name,'-pg-ne')].name | [0]" -o tsv)
           [ -n "${PG_SERVER}" ] || PG_SERVER=$(az resource list -g "${RG_NAME}" --resource-type "Microsoft.DBforPostgreSQL/flexibleServers" --query "[0].name" -o tsv)
           [ -n "${PG_SERVER}" ] || (echo "ERROR: No Postgres Flexible Server in ${RG_NAME}"; exit 1)
@@ -106,7 +99,7 @@ jobs:
             -t "${ACR_LOGIN}/opal/aml-sd-stub:${IMAGE_TAG}" \
             -f src/aml_sd_stub/Dockerfile . --push
 
-      - name: Create/Update Container Apps (self-healing + ingress enable idempotent)
+      - name: Create/Update Container Apps (self-healing + ingress enable idempotent + retries)
         run: |
           set -euo pipefail
 
@@ -125,7 +118,16 @@ jobs:
 
           ensure_identity () {
             local NAME="$1"
-            az containerapp identity assign -g "${RG_NAME}" -n "${NAME}" --system-assigned >/dev/null
+            for i in 1 2 3 4 5; do
+              if az containerapp identity assign -g "${RG_NAME}" -n "${NAME}" --system-assigned >/dev/null 2>&1; then
+                echo "Identity assigned for ${NAME}"
+                return 0
+              fi
+              echo "Identity assign failed for ${NAME}. Retrying in 30s... (attempt ${i}/5)"
+              sleep 30
+            done
+            echo "ERROR: Identity assign kept failing for ${NAME}"
+            return 1
           }
 
           ensure_acr_pull () {
@@ -134,18 +136,39 @@ jobs:
             PRINCIPAL_ID=$(az containerapp show -g "${RG_NAME}" -n "${NAME}" --query "identity.principalId" -o tsv)
             [ -n "${PRINCIPAL_ID}" ] || (echo "ERROR: No principalId for ${NAME}"; exit 1)
 
-            az role assignment create \
-              --assignee-object-id "${PRINCIPAL_ID}" \
-              --assignee-principal-type ServicePrincipal \
-              --role "AcrPull" \
-              --scope "${ACR_ID}" 2>/dev/null || true
+            for i in 1 2 3 4 5; do
+              if az role assignment create \
+                --assignee-object-id "${PRINCIPAL_ID}" \
+                --assignee-principal-type ServicePrincipal \
+                --role "AcrPull" \
+                --scope "${ACR_ID}" >/dev/null 2>&1; then
+                echo "AcrPull assigned for ${NAME}"
+                return 0
+              fi
+              echo "AcrPull assignment failed for ${NAME}. Retrying in 15s... (attempt ${i}/5)"
+              sleep 15
+            done
+
+            # We don't hard-fail here because RBAC can be eventually-consistent;
+            # the subsequent registry binding/update may still succeed if role was already present.
+            echo "WARNING: AcrPull assignment kept failing for ${NAME} (continuing)"
+            return 0
           }
 
           ensure_registry_binding () {
             local NAME="$1"
-            az containerapp registry set -g "${RG_NAME}" -n "${NAME}" \
-              --server "${ACR_LOGIN}" \
-              --identity system >/dev/null
+            for i in 1 2 3 4 5; do
+              if az containerapp registry set -g "${RG_NAME}" -n "${NAME}" \
+                --server "${ACR_LOGIN}" \
+                --identity system >/dev/null 2>&1; then
+                echo "Registry bound for ${NAME}"
+                return 0
+              fi
+              echo "Registry binding failed for ${NAME}. Retrying in 15s... (attempt ${i}/5)"
+              sleep 15
+            done
+            echo "ERROR: Registry binding kept failing for ${NAME}"
+            return 1
           }
 
           ensure_ingress () {
@@ -157,11 +180,13 @@ jobs:
               return 0
             fi
 
+            # enable may fail with "already enabled" -> ignore
             az containerapp ingress enable -g "${RG_NAME}" -n "${NAME}" \
               --type "${MODE}" \
               --target-port "${PORT}" \
               --transport auto >/dev/null 2>&1 || true
 
+            # update may fail if already correct -> ignore
             az containerapp ingress update -g "${RG_NAME}" -n "${NAME}" \
               --type "${MODE}" \
               --target-port "${PORT}" >/dev/null 2>&1 || true
